<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gui_message"
        android:textSize="30dp"
        />

    <Button
        android:id="@+id/btn"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_message"
        android:textColor="#000000"
        />

    <CheckBox
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chbox_message"
        />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_below="@+id/btn"
        android:layout_alignParentStart="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        />

    <Switch
        android:id="@+id/switchOnOff"
        android:layout_below="@+id/btn"
        android:layout_toEndOf="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_message"
        />

    <EditText
        android:layout_below="@+id/imageButton"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_hint"
        android:inputType="textPersonName"
        />

</RelativeLayout>
