<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Row 1: Text -->
    <TextView
        android:id="@+id/gui_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gui_message"
        android:textSize="30sp" />

    <!-- Row 2: Button and checkbox-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:text="@string/btn_message" />
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:text="@string/chbox_message" />
    </LinearLayout>

    <!-- Row 3: ImageButton-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:src="@drawable/flag"/>
        <Switch
            android:id="@+id/switchOnOff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:text="@string/switch_message"/>
    </LinearLayout>

    <!-- Row 4: Text-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_hint"
        android:inputType="textPersonName"
        android:textSize="20sp"/>

</LinearLayout>